test/fail/api/string/string_to_i_over_max.lly
#[
ValueError: Value exceeds allowed range.
Traceback:
    File "[builtin]", from string::to_i
    File "string_to_i_over_max.lly", from __main__ at line 8
]#

"9223372036854775808".to_i()
